--- a/config.json
+++ b/config.json
@@ -1,11 +1,13 @@
 {
-  "name": "你的个人博客",
+  "name": "一个不知名的小站",
+  "subname": "好好学习，天天向上吧",
   "articles": [
     {
       "path": "./articles/about-site.md",
       "title": "关于",
-      "subtitle": "",
-      "date": "2018/6/17 13:02"
+      "subtitle": "我的第一篇文章",
+      "date": "2018/6/17 12:02"
     }
-  ]
+  ],
+  "end": "Hello, world.😁"
 }
