--- a/config/artConfig.json
+++ b/config/artConfig.json
@@ -3,8 +3,14 @@
     {
       "path": "./articles/about-site.md",
       "title": "关于本站",
-      "subtitle": "",
-      "date": "2018/6/17 13:02"
+      "subtitle": "about the web site",
+      "date": "2018/6/17 13:02",
+      "tags": [
+        "生活", "原创"
+      ]
     }
+  ],
+  "tags": [
+    "技术", "生活", "原创", "收藏"
   ]
 }
